data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_741.wast
;; 2. **Test Description**: Create a `br_table` with indices that target labels interleaved with `nop` instructions randomly placed before each label.    - **Constraint**: Confirming `nop`'s presence does not affect the branching to correct labels.    - **Edge Case**: Checking correct label targeting when `br_table` index exceeds bounds.

(assert_invalid
  (module
    (func (block (br_table 0 (nop) (block (loop (nop) (br 1)))))))
  "type mismatch"
)